--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -216,3 +216,867 @@ a.subbutton.active {
 li.button-item {
     margin-bottom: 1em;
 }
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+    background-color: #FE4B1C;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.animated {
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    -ms-animation-duration: 1s;
+    -o-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    -moz-animation-fill-mode: both;
+    -ms-animation-fill-mode: both;
+    -o-animation-fill-mode: both;
+    animation-fill-mode: both
+}
+
+.animated.hinge {
+    -webkit-animation-duration: 2s;
+    -moz-animation-duration: 2s;
+    -ms-animation-duration: 2s;
+    -o-animation-duration: 2s;
+    animation-duration: 2s
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+@-o-keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    -moz-animation-name: fadeIn;
+    -o-animation-name: fadeIn;
+    animation-name: fadeIn
+}
+
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0)
+    }
+}
+
+@-moz-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -moz-transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        -moz-transform: translateY(0)
+    }
+}
+
+@-o-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -o-transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        -o-transform: translateY(0)
+    }
+}
+
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+
+.fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    -moz-animation-name: fadeInDown;
+    -o-animation-name: fadeInDown;
+    animation-name: fadeInDown
+}
+
+@-webkit-keyframes fadeInDownBig {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-2000px)
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0)
+    }
+}
+
+@-moz-keyframes fadeInDownBig {
+    0% {
+        opacity: 0;
+        -moz-transform: translateY(-2000px)
+    }
+
+    100% {
+        opacity: 1;
+        -moz-transform: translateY(0)
+    }
+}
+
+@-o-keyframes fadeInDownBig {
+    0% {
+        opacity: 0;
+        -o-transform: translateY(-2000px)
+    }
+
+    100% {
+        opacity: 1;
+        -o-transform: translateY(0)
+    }
+}
+
+@keyframes fadeInDownBig {
+    0% {
+        opacity: 0;
+        transform: translateY(-2000px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+
+.fadeInDownBig {
+    -webkit-animation-name: fadeInDownBig;
+    -moz-animation-name: fadeInDownBig;
+    -o-animation-name: fadeInDownBig;
+    animation-name: fadeInDownBig
+}
+
+@-webkit-keyframes bounceIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0.3)
+    }
+
+    50% {
+        opacity: 1;
+        -webkit-transform: scale(1.05)
+    }
+
+    70% {
+        -webkit-transform: scale(0.9)
+    }
+
+    100% {
+        -webkit-transform: scale(1)
+    }
+}
+
+@-moz-keyframes bounceIn {
+    0% {
+        opacity: 0;
+        -moz-transform: scale(0.3)
+    }
+
+    50% {
+        opacity: 1;
+        -moz-transform: scale(1.05)
+    }
+
+    70% {
+        -moz-transform: scale(0.9)
+    }
+
+    100% {
+        -moz-transform: scale(1)
+    }
+}
+
+@-o-keyframes bounceIn {
+    0% {
+        opacity: 0;
+        -o-transform: scale(0.3)
+    }
+
+    50% {
+        opacity: 1;
+        -o-transform: scale(1.05)
+    }
+
+    70% {
+        -o-transform: scale(0.9)
+    }
+
+    100% {
+        -o-transform: scale(1)
+    }
+}
+
+@keyframes bounceIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.3)
+    }
+
+    50% {
+        opacity: 1;
+        transform: scale(1.05)
+    }
+
+    70% {
+        transform: scale(0.9)
+    }
+
+    100% {
+        transform: scale(1)
+    }
+}
+
+.bounceIn {
+    -webkit-animation-name: bounceIn;
+    -moz-animation-name: bounceIn;
+    -o-animation-name: bounceIn;
+    animation-name: bounceIn
+}
+
+@-webkit-keyframes bounceInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-2000px)
+    }
+
+    60% {
+        opacity: 1;
+        -webkit-transform: translateY(30px)
+    }
+
+    80% {
+        -webkit-transform: translateY(-10px)
+    }
+
+    100% {
+        -webkit-transform: translateY(0)
+    }
+}
+
+@-moz-keyframes bounceInDown {
+    0% {
+        opacity: 0;
+        -moz-transform: translateY(-2000px)
+    }
+
+    60% {
+        opacity: 1;
+        -moz-transform: translateY(30px)
+    }
+
+    80% {
+        -moz-transform: translateY(-10px)
+    }
+
+    100% {
+        -moz-transform: translateY(0)
+    }
+}
+
+@-o-keyframes bounceInDown {
+    0% {
+        opacity: 0;
+        -o-transform: translateY(-2000px)
+    }
+
+    60% {
+        opacity: 1;
+        -o-transform: translateY(30px)
+    }
+
+    80% {
+        -o-transform: translateY(-10px)
+    }
+
+    100% {
+        -o-transform: translateY(0)
+    }
+}
+
+@keyframes bounceInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-2000px)
+    }
+
+    60% {
+        opacity: 1;
+        transform: translateY(30px)
+    }
+
+    80% {
+        transform: translateY(-10px)
+    }
+
+    100% {
+        transform: translateY(0)
+    }
+}
+
+.bounceInDown {
+    -webkit-animation-name: bounceInDown;
+    -moz-animation-name: bounceInDown;
+    -o-animation-name: bounceInDown;
+    animation-name: bounceInDown
+}
+
+@-webkit-keyframes drop {
+    0% {
+        -webkit-transform: translateY(-500px)
+    }
+
+    100% {
+        -webkit-transform: translateY(0)
+    }
+}
+
+@-moz-keyframes drop {
+    0% {
+        -moz-transform: translateY(-500px)
+    }
+
+    100% {
+        -moz-transform: translateY(0)
+    }
+}
+
+@-o-keyframes drop {
+    0% {
+        -o-transform: translateY(-500px)
+    }
+
+    100% {
+        -o-transform: translateY(0)
+    }
+}
+
+@keyframes drop {
+    0% {
+        transform: translateY(-500px)
+    }
+
+    100% {
+        transform: translateY(0)
+    }
+}
+
+.drop {
+    -webkit-animation-name: drop;
+    -moz-animation-name: drop;
+    -o-animation-name: drop;
+    animation-name: drop
+}
+
+.entry,.hentry {
+    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    *zoom: 1
+}
+
+.entry:before,.hentry:before,.entry:after,.hentry:after {
+    display: table;
+    line-height: 0;
+    content: ""
+}
+
+.entry:after,.hentry:after {
+    clear: both
+}
+
+.entry-feature-image {
+    width: 100%;
+    margin: 20px 0 0
+}
+
+@media only screen and (min-width: 48em) {
+    .entry-feature-image {
+        margin-top:-75px
+    }
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-feature-image {
+        margin-top:-145px
+    }
+}
+
+.entry-header {
+    width: 100%;
+    max-width: 640px;
+    margin-right: auto;
+    margin-left: auto
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-header {
+        max-width:100%;
+        margin-right: 0;
+        margin-left: 0
+    }
+}
+
+.entry-tags {
+    display: block;
+    margin-top: 2em;
+    font-size: 16px;
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase
+}
+
+.entry-tags a {
+    color: #222
+}
+
+span+.entry-title {
+    margin-top: 0
+}
+
+.entry-title {
+    font-family: 'volkhov',serif;
+    font-size: 36px;
+    font-size: 2.25rem;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: -3px
+}
+
+.entry-title a {
+    color: #000;
+    text-decoration: underline
+}
+
+@media only screen and (min-width: 48em) {
+    .entry-title {
+        max-width:600px;
+        font-size: 52px;
+        font-size: 3.25rem
+    }
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-title {
+        max-width:800px;
+        font-size: 68px;
+        font-size: 4.25rem
+    }
+}
+
+.entry-wrapper {
+    max-width: 440px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0 auto 3em;
+    *zoom: 1
+}
+
+.entry-wrapper:before,.entry-wrapper:after {
+    display: table;
+    line-height: 0;
+    content: ""
+}
+
+.entry-wrapper:after {
+    clear: both
+}
+
+@media only screen and (min-width: 48em) {
+    .entry-wrapper {
+        max-width:760px;
+        padding-right: 60px;
+        padding-left: 60px
+    }
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-wrapper {
+        max-width:960px
+    }
+}
+
+.entry-meta {
+    display: block;
+    width: 100%;
+    max-width: 640px;
+    margin-right: auto;
+    margin-bottom: 30px;
+    margin-left: auto;
+    font-size: 14px;
+    font-size: .875rem;
+    text-transform: uppercase
+}
+
+.entry-meta a {
+    color: #222
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-meta {
+        float:left;
+        width: 150px;
+        padding: 0;
+        margin: 0 40px 40px 0
+    }
+}
+
+.entry-meta>span {
+    display: inline-block;
+    padding: 0 20px 10px 0
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-meta>span {
+        display:block;
+        padding: 8px 0;
+        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid rgba(0,0,0,0.1)
+    }
+}
+
+.author-photo {
+    display: none
+}
+
+@media only screen and (min-width: 62.5em) {
+    .author-photo {
+        display:block;
+        width: 150px;
+        height: 150px;
+        margin-bottom: 10px;
+        -webkit-border-radius: 150px;
+        -moz-border-radius: 150px;
+        border-radius: 150px;
+        *zoom: 1
+    }
+
+    .author-photo:after {
+        clear: both
+    }
+}
+
+.entry-content {
+    width: 100%;
+    max-width: 640px;
+    margin-right: auto;
+    margin-left: auto
+}
+
+.entry-content p:first-child {
+    margin-top: 0
+}
+
+@media only screen and (min-width: 62.5em) {
+    .entry-content {
+        float:left
+    }
+}
+
+.entry-content p>a,.entry-content li>a {
+    border-bottom: 1px dotted #a2a2a2
+}
+
+.entry-content p>a:hover,.entry-content li>a:hover {
+    border-bottom-style: solid
+}
+
+.post-list li>a {
+    border-bottom-width: 0
+}
+
+#disqus_thread {
+    margin-top: 2em
+}
+
+.pagination {
+    text-align: center
+}
+
+#home .entry-title,#page .entry-title {
+    max-width: 100%;
+    text-align: center
+}
+
+@media only screen and (min-width: 62.5em) {
+    #home .entry-content,#page .entry-content {
+        float:none
+    }
+}
+
+.post-list {
+    padding: 0;
+    margin: 0;
+    list-style-type: none
+}
+
+.post-list li {
+    padding: 8px 0;
+    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    *zoom: 1
+}
+
+.post-list li:before,.post-list li:after {
+    display: table;
+    line-height: 0;
+    content: ""
+}
+
+.post-list li:after {
+    clear: both
+}
+
+.post-list a>span {
+    float: right
+}
+
+.post-list .entry-date {
+    display: none;
+    font-size: 14px;
+    font-size: .875rem;
+    text-transform: uppercase
+}
+
+@media only screen and (min-width: 48em) {
+    .post-list .entry-date {
+        display:inline
+    }
+}
+
+.tag-box {
+    padding: 4px 0;
+    margin: 0;
+    overflow: hidden;
+    list-style: none;
+    *zoom: 1
+}
+
+.tag-box:before,.tag-box:after {
+    display: table;
+    line-height: 0;
+    content: ""
+}
+
+.tag-box:after {
+    clear: both
+}
+
+.tag-box.inline li {
+    float: left;
+    font-size: 14px;
+    font-size: .875rem;
+    line-height: 2.5
+}
+
+.tag-box a {
+    padding: 4px 6px;
+    margin: 2px;
+    text-decoration: none;
+    background-color: #e6e6e6;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px
+}
+
+.tag-box a span {
+    font-size: 10px;
+    font-size: .625rem;
+    vertical-align: super
+}
+
+
+
+
+
+
+#repos {
+    height: 300px;
+}
+div.repo {
+    height: 190px;
+    background: #3D4765;
+    color: #fff;
+    margin-bottom: 10px
+}
+
+div.repo > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  text-decoration: none;
+  color: #fff;
+}
+
+div.repo a:hover {
+  background: #FE4B1C;
+}
+
+div.repo h2, div.repo h3, div.repo p {
+  margin: 10px 15px;
+}
+
+div.repo h2 {
+  margin-top: 15px;
+  margin-bottom: 2px;
+  overflow: hidden;
+  font-size: 18px;
+}
+
+div.repo h3 {
+  font-size: 11px;
+  margin-top: 2px;
+  margin-bottom: 15px;
+  color: #999;
+}
+
+.repo1:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-bottom: 5px solid #000000;
+  border-left: 110px solid #000000;
+  border-right: 110px solid #000000;
+  border-top: 5px solid #000000;
+  pointer-events: none;
+}
+
+
+
+
+
+
+
+
+
+/**** Isotope Filtering ****/
+
+.isotope-item {
+  z-index: 2;
+}
+
+.isotope-hidden.isotope-item {
+  pointer-events: none;
+  z-index: 1;
+}
+
+/**** Isotope CSS3 transitions ****/
+
+.isotope,
+.isotope .isotope-item {
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+      -ms-transition-property: height, width;
+       -o-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:      -o-transform, opacity;
+          transition-property:         transform, opacity;
+}
+
+/**** disabling Isotope CSS3 transitions ****/
+
+.isotope.no-transition,
+.isotope.no-transition .isotope-item,
+.isotope .isotope-item.no-transition {
+  -webkit-transition-duration: 0s;
+     -moz-transition-duration: 0s;
+      -ms-transition-duration: 0s;
+       -o-transition-duration: 0s;
+          transition-duration: 0s;
+}
