--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -91,6 +91,13 @@
     <script src="{{site.url}}/_bower_components/sass-bootstrap/js/bootstrap-collapse.js"></script>
     <script src="{{site.url}}/_bower_components/sass-bootstrap/js/bootstrap-tab.js"></script>
 
+    {% if page.active == "home" %}
+        <script src="{{site.url}}/js/jquery.fittext.js"></script>
+        <script src="{{site.url}}/js/bigtext.js"></script>
+        <script type="text/javascript">
+              setupHeader();
+        </script>
+    {% endif %}
     {% if page.active == "projects" %}
         <script src="{{site.url}}/_bower_components/masonry/masonry.pkgd.min.js"></script>
         <script src="{{site.url}}/_bower_components/isotope/jquery.isotope.js"></script>
