--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,6 +1,17 @@
 @import 'sass-bootstrap/lib/bootstrap';
 @import 'sass-bootstrap/lib/responsive';
 
+@font-face {
+    font-family: 'league_gothicregular';
+    src: url('type/leaguegothic-regular-webfont.eot');
+    src: url('type/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('type/leaguegothic-regular-webfont.woff') format('woff'),
+         url('type/leaguegothic-regular-webfont.ttf') format('truetype'),
+         url('type/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 300px;
@@ -92,7 +103,7 @@ a.button.active {
 
 .span-fixed-sidebar {
     padding-left: 60px;
-    margin-left: 286px !important;
+    margin-left: 360px !important;
     margin-top: -33px !important;
 }
 
@@ -109,6 +120,10 @@ body {
         margin-left: auto !important;
         margin-top: auto !important;
         padding-left: 0;
+    }
+
+    #mainHeader {
+        margin-top: 20px !important;
     }
 }
 
@@ -227,7 +242,16 @@ hr {
     background-color: #FE4B1C;
 }
 
+p#mainHeader {
+    font-family: league_gothicregular;
+    width: 100%;
+    line-height: 75px;
+    color: #3D4765;
+}
 
+span#name {
+    font-size: 150%;
+}
 
 
 
