--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }} - Aaron Foltz - Father, Software Engineer, Technology Connoisseur</title>
+    <title>{{ page.title }} - Aaron Foltz - Software Engineer, Husband, and Father</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
