--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -46,7 +46,7 @@ a.button {
     border-style: solid;
     border-width: 1px;
     cursor: pointer;
-    font-family: inherit;
+    font-family: league_gothicregular;
     font-weight: 700;
     line-height: 1;
     position: relative;
@@ -179,6 +179,7 @@ body {
 
 .about p {
     font-weight: bold;
+    font-family: league_gothicregular;
 }
 
 
