--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3 sidebar-width">
+        <div class="span2 sidebar-width">
             <div class="well sidebar-nav-fixed">
                 <a href="/index.html"><img src="{{ site.url }}/img/logo.svg" class="logo"/></a>
 
@@ -53,7 +53,7 @@
     </div><!--/.fluid-container-->
     <div class="row">
       <!-- Main Content Section -->
-      <div class="span9 span-fixed-sidebar">
+      <div class="span10 span-fixed-sidebar pull-right">
         <div id="content">
           {{ content }}
         </div>
