--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -10,11 +10,203 @@
          url('type/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
+
+@font-face {
+    font-family: 'opensans-regular';
+    src: url('type/opensans-regular-webfont.eot');
+    src: url('type/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('type/opensans-regular-webfont.woff') format('woff'),
+         url('type/opensans-regular-webfont.ttf') format('truetype'),
+         url('type/opensans-regular-webfont.svg#opensans-regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'opensans-semibold';
+    src: url('type/opensans-semibold-webfont.eot');
+    src: url('type/opensans-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('type/opensans-semibold-webfont.woff') format('woff'),
+         url('type/opensans-semibold-webfont.ttf') format('truetype'),
+         url('type/opensans-semibold-webfont.svg#opensans-semibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 300px;
+}
+
+/* Large desktop */
+@media (min-width: 2000px){
+    .span10 {
+        width: 1700px;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1900px) and (max-width: 1999px){
+    .span10 {
+        width: 1600px;
+    }
+
+    p#mainHeader {
+        line-height: 135px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1800px) and (max-width: 1899px){
+    .span10 {
+        width: 1500px;
+    }
+
+    p#mainHeader {
+        line-height: 125px !important;
+    }
+
+    p#mainHeader {
+        line-height: 115px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1700px) and (max-width: 1799px){
+    .span10 {
+        width: 1400px;
+    }
+
+    p#mainHeader {
+        line-height: 115px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1600px) and (max-width: 1699px){
+    .span10 {
+        width: 1300px;
+    }
+
+    p#mainHeader {
+        line-height: 105px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1500px) and (max-width: 1599px){
+    .span10 {
+        width: 1200px;
+    }
+
+    p#mainHeader {
+        line-height: 95px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1400px) and (max-width: 1499px){
+    .span10 {
+        width: 1100px;
+    }
+
+    p#mainHeader {
+        line-height: 85px !important;
+    }
+}
+
+/* Large desktop */
+@media (min-width: 1200px) and (max-width: 1399px) {
+    div#content {
+        padding-left: 45px !important;
+    }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 1100px) and (max-width: 1199px) {
+    div#content {
+        padding-left: 0px !important;
+    }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 980px) and (max-width: 1099px) {
+    div#content {
+        padding-left: 100px !important;
+    }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 835px) and (max-width: 979px) {
+    /* Enable use of floated navbar text */
+    .navbar-text.pull-right {
+        float: none;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    div#content {
+        padding-left: 0px;
+    }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 835px) {
+    div#content {
+        padding-left: 120px !important;
+    }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (max-width: 767px) {
+    .sidebar-nav-fixed {
+        position: relative !important;
+    }
+
+    .span-fixed-sidebar {
+        margin-left: auto !important;
+        margin-top: auto !important;
+        padding-left: 0;
+    }
+
+    #mainHeader {
+        margin-top: 20px !important;
+    }
+
+    div#content {
+        padding-left: 0px !important;
+        padding-top: 60px !important;
+        margin-top: 0px !important;
+        text-align: center;
+    }
+
+    div.constrainedContent {
+        border-top-right-radius: 10px;
+        -webkit-border-top-right-radius: 10px;
+        -moz-border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        -webkit-border-bottom-right-radius: 10px;
+        -moz-border-bottom-right-radius: 10px;
+    }
+
+    div.imageContainer, div.headerContainer {
+        display: inline-block !important;
+    }
+    div.imageContainer {
+        float: none !important;
+    }
+
+    div.headerContainer {
+        margin-top: 0px !important;
+        margin-right: 0px !important;
+        height: 100% !important;
+    }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+
 }
 
 body {
@@ -22,14 +214,10 @@ body {
     padding-bottom: 40px;
 }
 
-@media (max-width: 980px) {
-    /* Enable use of floated navbar text */
-    .navbar-text.pull-right {
-        float: none;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
+html, body {
+    height: 100%;
 }
+
 
 .left-nav {
     margin-left: 0;
@@ -46,21 +234,20 @@ a.button {
     border-style: solid;
     border-width: 1px;
     cursor: pointer;
-    font-family: league_gothicregular;
+    font-family: opensans-semibold;
     font-weight: 700;
     line-height: 1;
     position: relative;
     text-decoration: none;
     text-align: center;
     display: block;
-    font-size: 1em;
     background-color: #3D4765;
     border-color: #3D4765;
     color: #fff;
 
     padding-top: .5625em;
     padding-bottom: .625em;
-    font-size: .8125em;
+    font-size: 100%;
 
     width: 100%;
     -webkit-transition: all 0.25s ease-in-out;
@@ -102,29 +289,12 @@ a.button.active {
 }
 
 .span-fixed-sidebar {
-    padding-left: 60px;
-    margin-left: 360px !important;
     margin-top: -33px !important;
 }
 
 body {
-    background: url('../img/bg.png') repeat
-}
-
-@media (max-width: 767px) {
-    .sidebar-nav-fixed {
-        position: relative;
-    }
-
-    .span-fixed-sidebar {
-        margin-left: auto !important;
-        margin-top: auto !important;
-        padding-left: 0;
-    }
-
-    #mainHeader {
-        margin-top: 20px !important;
-    }
+    background: url('../img/bg.png') repeat;
+    overflow-x: hidden;
 }
 
 .well {
@@ -143,6 +313,16 @@ body {
     background: url("../img/me-final.png");
     width: 266px; height: 400px;
     border: 1px solid #FE4B1C;
+    float: right;
+    margin-right: 19px;
+    margin-top: 100px;
+}
+
+.headerContainer {
+    margin-top: 200px;
+    margin-right: 300px;
+    height: 402px
+    /* Should match the image height */
 }
 
 .icons {
@@ -178,8 +358,9 @@ body {
 
 
 .about p {
-    font-weight: bold;
-    font-family: league_gothicregular;
+    font-family: opensans-regular;
+    font-size: 130%;
+    line-height: 23px;
 }
 
 
@@ -254,10 +435,23 @@ span#name {
     font-size: 150%;
 }
 
+div.constrainedContent {
+    background: whitesmoke;
+    border-top-left-radius: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-bottom-left-radius: 10px;
+    border: 1px solid #FE4B1C;
+    border-right: 0; // Remove border from right side
+    padding: 30px
+}
 
-
-
-
+div#content {
+    padding-left: 40px;
+    overflow:hidden;
+}
 
 
 
